--- a/StoreAPI/appsettings.json
+++ b/StoreAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\zepe_\\OneDrive\\Documentos\\dbTestSoloTalento.mdf;Integrated Security=True;Connect Timeout=30"
+    "DefaultConnection": "Data Source=dbTestSoloTalento.db;"
   }
 }
